[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/Saver.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/powerup_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/home-grown/save_station.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 21 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="Saver" type="Node2D"]
script = ExtResource( 1 )

[node name="PauseTimer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="SaveSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="SaveText" type="RichTextLabel" parent="."]
visible = false
margin_left = -120.0
margin_top = -168.0
margin_right = 145.0
margin_bottom = -112.0
custom_fonts/normal_font = SubResource( 1 )
text = "Game Saved"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 1, 1.75 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
